devops-project/k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
